# azure_document_intelligence

./: main.py  pyproject.toml
