[tool.poetry]
name = "azure-document-intelligence"
version = "0.1.0"
description = ""
authors = ["davidpt <david.narciso@pt.softinsa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
azure-ai-formrecognizer = "3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
